# embed_java

./: Cargo.toml  README.md  link.map  mips.json
.cargo/: config.toml
build_tools/src/: main.rs
java_rt/src/: BrockVirtualInterface.java  Main.java  VirtualInterface.java  VirtualMachine.java
rust_rt/ll_alloc/src/: lib.rs
rust_rt/macros/: Cargo.toml
rust_rt/macros/src/: lib.rs
rust_rt/main/: Cargo.toml
rust_rt/main/src/: alloc.rs  asteroids.rs  main.rs  panic_handler.rs
rust_rt/rlib/src/: brock_interface.rs  core_rust.rs  lib.rs  macros.rs  rt.rs  screen.rs  sys.rs
rust_rt/rlib/src/arch/: call_ids.rs  mod.rs  syscalls.rs
rust_rt/rlib/src/brock/: mod.rs
rust_rt/rlib/src/io/: mod.rs
rust_rt/rlib/src/nji/: callback.rs  class.rs  mod.rs  object.rs  primitives.rs  reflection.rs
rust_rt/rlib/src/prelude/: mod.rs
rust_rt/rlib/src/process/: mod.rs
rust_rt/rlib/src/sync/: mod.rs
rust_rt/rlib/src/thread/: mod.rs
