[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
rlib = { path = "../rlib", features = ["alloc"] }
emballoc = "*"
#wee_alloc = { version = "*", features = ["static_array_backend"]}
macros = { version = "*", path = "../macros"}
lazy_static = { version = "*", features = ["spin_no_std"]}
