[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
rlib = { path = "../rlib", features = ["alloc"] }
ll_alloc ={ path = "../ll_alloc" }
# macros = { version = "*", path = "../macros"}
# lazy_static = { version = "*", features = ["spin_no_std"]}
libm = "*"

[dependencies.num-traits]
version = "0.2"
default-features = false